--- a/index.html
+++ b/index.html
@@ -8,16 +8,18 @@
   </head>
   <body>
     <header>
-      <a href="./index.html" lang="en">WebStudio</a>
       <nav>
+        <a href="./index.html" lang="en">WebStudio</a>
         <ul>
           <li><a href="">Студія</a></li>
           <li><a href="">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <!-- Hero section -->
@@ -62,22 +64,22 @@
         <ul>
           <li>
             <img src="./images/member-1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
-            <h4>Ігор Дем'яненко</h4>
+            <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
             <img src="./images/member-2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
-            <h4>Ольга Рєпіна</h4>
+            <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img src="./images/member-3.jpg" alt="Микола Тарасов" width="270" height="260" />
-            <h4>Микола Тарасов</h4>
+            <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img src="./images/member-4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
-            <h4>Михайло Єрмаков</h4>
+            <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -87,8 +89,10 @@
       <a href="./index.html" lang="en">WebStudio</a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
