--- a/index.html
+++ b/index.html
@@ -65,22 +65,22 @@
           <li>
             <img src="./images/member-1.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
             <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img src="./images/member-2.jpg" alt="Ольга Рєпіна" width="270" height="260" />
             <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/member-3.jpg" alt="Микола Тарасов" width="270" height="260" />
             <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img src="./images/member-4.jpg" alt="Михайло Єрмаков" width="270" height="260" />
             <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -88,7 +88,9 @@
     <footer>
       <a href="./index.html" lang="en">WebStudio</a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <a href="https://goo.gl/maps/7gZieauw5EvDryMb9" target="_blank" rel="noreferrer noopener"
+          >м. Київ, пр-т Лесі Українки, 26</a
+        >
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
