--- a/index.html
+++ b/index.html
@@ -88,10 +88,15 @@
     <footer>
       <a href="./index.html" lang="en">WebStudio</a>
       <address>
-        <a href="https://goo.gl/maps/7gZieauw5EvDryMb9" target="_blank" rel="noreferrer noopener"
-          >м. Київ, пр-т Лесі Українки, 26</a
-        >
         <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/7gZieauw5EvDryMb9"
+              target="_blank"
+              rel="noreferrer noopener"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
